--- a/template/web_developer.html
+++ b/template/web_developer.html
@@ -8,7 +8,7 @@
             <li class="list-group-item">ID: {% id %}</li>
             <li class="list-group-item">Email: <a href="mailto:{% email %}">{% email %}</a></li>
             <li class="list-group-item">Office Number: <a href="tel:{% officeNumber %}">{% officeNumber %}</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/{% github %}">{% github %}</a></li>
+            <li class="list-group-item">GitHub: <a href="https://git.com/{% git %}">{% github %}</a></li>
         </ul>
     </div>
 </div>
