--- a/template/manager.html
+++ b/template/manager.html
@@ -10,6 +10,7 @@
             <li class="list-group-item">Floor Level: {% floorLevel %}</li>
             <li class="list-group-item">Email: <a href="mailto:{% email %}">{% email %}</a></li>
             <li class="list-group-item">Office Number: <a href="tel:{% officeNumber %}">{% officeNumber %}</a></li>
+            <li class="list-group-item">Classification: {% classification %}</li>
         </ul>
     </div>
 </div>
