--- a/template/intern.html
+++ b/template/intern.html
@@ -7,7 +7,7 @@
         <ul class="list-group list-group-flush">
             <li class="list-group-item">ID: {% id %}</li>
             <li class="list-group-item">Email: <a href="mailto:{% email %}">{% email %}</a></li>
-            <li class="list-group-item">Uinversity: {% uni %}</li>
+            <li class="list-group-item">University: {% uni %}</li>
             
         </ul>
     </div>
