--- a/template/index.html
+++ b/template/index.html
@@ -24,12 +24,14 @@
   </head>
   <body>
     <div class="jumbotron text-center">
+      
       <h1 class="h1">Employment Team</h1>
+    
     </div>
     <div class="container" id = "team">
-      <div class="col-12 text-center bg-info my-5 py-5 display-4 text-white">Current Team</div>
+      <div class="col-12"></div>
       <div class="row" id = "card">
-        <script></script>        
+        <script></script>     
       </div>
     </div>
   </body>
