--- a/template/manager.html
+++ b/template/manager.html
@@ -1,8 +1,17 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Manager</title>
+</head>
+<body>
+    
 <div class="col-md-6 col-lg-4">
     <div class="card">
         <div class="card-header">
             <h2>{% name %}</h2>
-            <h3><i></i> 👨‍💼 Manager</h3>
+            <h3> 👨‍💼 Manager</h3>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">ID: {% id %}</li>
@@ -14,3 +23,5 @@
         </ul>
     </div>
 </div>
+</body>
+</html>
